...
    "description":  "Text of link in dialog shown on first upgrade from the legacy Zulip app."
  },
  "upgradeWelcomeDialogDismiss": "Let's go",
  "@upgradeWelcomeDialogDismiss":  {
    "description":  "Label for button dismissing dialog shown on first upgrade from the legacy Zulip app."
  },
  "chooseAccountPageTitle": "Choose account",
  "@chooseAccountPageTitle": {
    "description": "Title for the page to choose between Zulip accounts."
  },
  "settingsPageTitle": "Settings",
  "@settingsPageTitle": {
    "description": "Title for the settings page."
...
    "description": "Message for a confirmation dialog for logging out."
  },
  "logOutConfirmationDialogConfirmButton": "Log out",
  "@logOutConfirmationDialogConfirmButton": {
    "description": "Label for the 'Log out' button on a confirmation dialog for logging out."
  },
  "chooseAccountButtonAddAnAccount": "Add an account",
  "@chooseAccountButtonAddAnAccount": {
    "description": "Label for ChooseAccountPage button to add an account"
  },
  "navButtonAllChannels": "All channels",
  "@navButtonAllChannels": {
    "description": "Title for a nav button that opens the 'All channels' page."
...
    "description": "Content validation error message when attachments have not finished uploading."
  },
  "dialogCancel": "Cancel",
  "@dialogCancel": {
    "description": "Button label in dialogs to cancel."
  },
  "dialogContinue": "Continue",
  "@dialogContinue": {
    "description": "Button label in dialogs to proceed."
  },
  "dialogClose": "Close",
  "@dialogClose": {
    "description": "Button label in dialogs to close."
...
    "description": "The current playback position of the video playing in the lightbox."
  },
  "lightboxVideoDuration": "Video duration",
  "@lightboxVideoDuration": {
    "description": "The total duration of the video playing in the lightbox."
  },
  "loginPageTitle": "Log in",
  "@loginPageTitle": {
    "description": "Title for login page."
  },
  "loginFormSubmitLabel": "Log in",
  "@loginFormSubmitLabel": {
    "description": "Button text to submit login credentials."
...
    "description": "Hint text for the message search text field."
  },
  "searchMessagesClearButtonTooltip": "Clear",
  "@searchMessagesClearButtonTooltip": {
    "description": "Tooltip for the 'x' button in the search text field."
  },
  "inboxPageTitle": "Inbox",
  "@inboxPageTitle": {
    "description": "Title for the page with unreads."
  },
  "inboxEmptyPlaceholderHeader": "There are no unread messages in your inbox.",
  "@inboxEmptyPlaceholderHeader": {
    "description": "Centered text on the 'Inbox' page saying that there is no content to show."
...
